Top down/logs/backend_debugger_20251128_221641.log

============================================================
BACKEND DEBUGGER - Starting Project
============================================================
Project path: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend
Port: 5000

[1/2] Starting Flask server...
  Python: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\venv\Scripts\python.exe
  App: C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py
  Process started (PID: 18644)
  Waiting for server to start (10 seconds)...
✗ Server failed to start
  stdout: 
  stderr:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 4
    from routes.add-to-cart_routes import add-to-cart_bp
                   ^
SyntaxError: invalid syntax


[2/2] Checking for errors...
  ✗ Found syntax in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Attempting to fix: syntax error in C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py

  Reasoning: **Error Analysis**

1. **Error Type**: This is a `SyntaxError`, which occurs when there is an issue with the syntax of the Python code.
2. **Most Likely Cause**: The most likely cause of this error is the use of invalid characters in the import statement. Specifically, the hyphen (`-`) in the module...

  Steps to fix:
  To completely solve the bug, follow these steps:

1. **FILESYSTEM**: Rename the file `add-to-cart_routes.py` to `add_to_cart_routes.py` in the `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app\routes` directory (fix naming convention).
2. **MODIFY_FILE**: Update the import statement in `app.py` from `from routes.add-to-cart_routes import add_to_cart_bp` to `from routes.add_to_cart_routes impo...

  Found 6 steps to execute

  Classifying all steps...

  Classifications:
  STEP 1: FILESYSTEM
STEP 2: MODIFY_FILE
STEP 3: MODIFY_FILE
STEP 4: FILESYSTEM
STEP 5: FILESYSTEM
STEP 6: MODIFY_FILE...

  Executing step 1/6...
    1. **FILESYSTEM**: Rename the file `add-to-cart_routes.py` to `add_to_cart_routes.py` in the `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app\ro
    Action type: FILESYSTEM
    Command: ren C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app\routes\add-to-cart_routes.py add_to_cart_routes.py
    ✗ Command failed: The syntax of the command is incorrect.


  Executing step 2/6...
    2. **MODIFY_FILE**: Update the import statement in `app.py` from `from routes.add-to-cart_routes import add_to_cart_bp` to `from routes.add_to_cart_ro
    Action type: MODIFY_FILE
    Target file: app.py
    ✗ Failed to modify file: Error code: 413 - {'error': {'message': 'Request too large for model `llama-3.3-70b-versatile` in organization `org_01jg0vqygwfkkb5s1m9m1epkxe` service tier `on_demand` on tokens per minute (TPM): Limit 12000, Requested 28653, please reduce your message size and try again. Need more tokens? Upgrade to Dev Tier today at https://console.groq.com/settings/billing', 'type': 'tokens', 'code': 'rate_limit_exceeded'}}

  Executing step 3/6...
    3. **MODIFY_FILE**: Update any other files that import from `add-to-cart_routes` to use the new module name `add_to_cart_routes`.
    Action type: MODIFY_FILE
    Target file: app.py
    ✗ Failed to modify file: Error code: 413 - {'error': {'message': 'Request too large for model `llama-3.3-70b-versatile` in organization `org_01jg0vqygwfkkb5s1m9m1epkxe` service tier `on_demand` on tokens per minute (TPM): Limit 12000, Requested 28641, please reduce your message size and try again. Need more tokens? Upgrade to Dev Tier today at https://console.groq.com/settings/billing', 'type': 'tokens', 'code': 'rate_limit_exceeded'}}

  Executing step 4/6...
    4. **FILESYSTEM**: Verify that the file `add_to_cart_routes.py` exists in the `C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app\routes` directory
    Action type: FILESYSTEM
    Command: dir C:\Users\ASUS\Desktop\Codes\POME\Top\down\backend\app\routes\add_to_cart_routes.py
    ✗ Command failed: The system cannot find the path specified.


  Executing step 5/6...
    5. **RUN_COMMAND**: Run the Python application again to test if the `SyntaxError` has been resolved, using a command such as `python app.py` in the `C
    Action type: FILESYSTEM
    Command: python app.py
    ✗ Command failed:   File "C:\Users\ASUS\Desktop\Codes\POME\Top down\backend\app.py", line 4
    from routes.add-to-car

  Executing step 6/6...
    6. **VERIFY_CODE**: Review the code in `add_to_cart_routes.py` and `app.py` to ensure that the changes have been made correctly and that there are no 
    Action type: MODIFY_FILE
    Target file: app.py
    ✗ Failed to modify file: Error code: 413 - {'error': {'message': 'Request too large for model `llama-3.3-70b-versatile` in organization `org_01jg0vqygwfkkb5s1m9m1epkxe` service tier `on_demand` on tokens per minute (TPM): Limit 12000, Requested 28649, please reduce your message size and try again. Need more tokens? Upgrade to Dev Tier today at https://console.groq.com/settings/billing', 'type': 'tokens', 'code': 'rate_limit_exceeded'}}

  ✗ No steps could be executed
